# tossinvest-openapi

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.codex/skills/toss-bump-version/: SKILL.md
.codex/skills/toss-bump-version/agents/: openai.yaml
.codex/skills/toss-commit-changes/: SKILL.md
.codex/skills/toss-commit-changes/agents/: openai.yaml
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml
docs/: Makefile  api.rst  conf.py  index.rst  usage.rst
examples/: get_price.py  get_token.py  list_accounts.py  list_assets.py  place_order_dry_run.py
scripts/: check_commit_messages.py  fetch_openapi.py  inspect_openapi.py  validate_release_tag.py
src/tossinvest/: __init__.py  _http.py  _serialization.py  async_client.py  auth.py  client.py  config.py  errors.py  models.py  openapi.py  pagination.py
src/tossinvest/_mcp/: __init__.py  accounts.py  config.py  credentials.py  server.py  tools.py
src/tossinvest/resources/: __init__.py  _utils.py  accounts.py  assets.py  market_data.py  market_info.py  orders.py  stocks.py
tests/: conftest.py  openapi_operations_snapshot.json  test_accounts.py  test_assets.py  test_async_resources.py  test_auth.py  test_client_headers.py  test_commit_messages.py  test_errors.py  test_market_data.py  test_market_info.py  test_mcp_server.py  test_openapi_snapshot.py  test_orders.py  test_stocks.py
tests/live/: __init__.py  conftest.py  test_live_readonly.py
